minor website updates

--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@ $ ln -sf mongo_hacker.js ~/.mongorc.js
 
 <h4>Sensible Defaults</h4>
 <ul>
-  <li>Verbose shell enabled</li>
-  <li>Auto multi update </li>
-  <li>Two spaces indent</li>
-  <li>Colon next to keys</li>
+  <li>A prompt that shows current database, version, and process name</li>
+  <li>Verbose shell enabled (shows query timing information)</li>
+  <li>Auto multi update (works just like update in SQL)</li>
+  <li>Two spaces indent (why waste the space?)</li>
+  <li>Colon next to keys (looks nicer right?)</li>
 </ul>
 
 <h4>Index Paranoia</h4>
