adding social to website

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
         <div id="title">
           <h1>Mongo Hacker</h1>
           <p>MongoDB Shell Enhancements for Hackers</p>
+          <center>
+          <iframe src="github-btn.html?user=TylerBrock&repo=mongo-hacker&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
+          <iframe src="github-btn.html?user=TylerBrock&repo=mongo-hacker&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
+          <a href="https://twitter.com/TylerBrock" class="twitter-follow-button" data-show-count="false">Follow @TylerBrock</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-via="TylerBrock">Tweet</a> 
+          <a href="http://news.ycombinator.com/submit" class="hn-share-button" data-title="MongoDB Shell Enhancements for Hackers" data-url="http://tylerbrock.github.com/mongo-hacker">Vote on HN</a>
+          </center>
           <hr>
           <span class="credits right">by <a href="https://github.com/TylerBrock">TylerBrock</a></span>
         </div>
@@ -97,6 +104,17 @@ Originally created and conceived of by Tyler Brock (<a href="https://github.com/
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+    <script>
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
+
+    <script>
+      (function(d, t) {
+        var g = d.createElement(t),
+            s = d.getElementsByTagName(t)[0];
+            g.src = '//hnbutton.appspot.com/static/hn.js';
+        s.parentNode.insertBefore(g, s);
+      }(document, 'script'));
+    </script>    
   </body>
 </html>
