updated website to include gavg() function

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ $ ln -sf mongo_hacker.js ~/.mongorc.js
   <pre><code>gcount(group_field, filter)</pre></code>
 <h5>Group and Sum</h5>
   <pre><code>gsum(group_field, sum_field, filter)</pre></code>
+<h5>Group and Sum</h5>
+  <pre><code>gavg(group_field, avg_field, filter)</pre></code>
 
 <h4>Sensible Defaults</h4>
 <ul>
