--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ db.collection.filter({ ... }).limit(3).remove()
 
 <h4>Sensible Defaults</h4>
 <ul>
+  <li>Display document keys in sorted order</li>
   <li>A prompt that shows current database, version, and process name</li>
   <li>Verbose shell enabled (shows query timing information)</li>
   <li>Auto multi update (works just like update in SQL)</li>
