Update installation instructions
Would be nice to fix the npm installer too

--- a/index.html
+++ b/index.html
@@ -55,15 +55,8 @@
 
 <h3>Installation</h3>
 
-<p>It's easy, just link mongo_hacker.js to .mongorc.js in your home directory.</p>
+<p>It's easy, just clone the repo and run <code>make</code>.</p>
 
-<p>The manual way:</p>
-<pre><code>$ git clone git@github.com:TylerBrock/mongo-hacker.git
-$ cd mongo-hacker
-$ ln -sf mongo_hacker.js ~/.mongorc.js
-</code></pre>
-
-<p>The automatic way:</p>
 <pre><code>$ git clone git@github.com:TylerBrock/mongo-hacker.git
 $ cd mongo-hacker
 $ make
@@ -118,7 +111,7 @@ db.collection.filter({ ... }).limit(3).remove()
 
 <h4>Index Paranoia</h4>
 
-  <p>Print index usage information on every query</p>
+  <p>Print index usage information on every query (default false)</p>
 
 <h4>Colorize and Highlight Query Time</h4>
 
