index.html: fix warranty typo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Originally created and conceived of by Tyler Brock (<a href="https://github.com/
 </p>
 
 <h3>Support or Contact</h3>
-<p>This software comes with no guarantee or warantee and is not endorsed by 10gen in any way.</p>
+<p>This software comes with no guarantee or warranty and is not endorsed by 10gen in any way.</p>
     </section>
 
     </div>
